shenyu-examples/shenyu-examples-websocket/shenyu-example-spring-annotation-websocket/k8s/shenyu-example-spring-annotation-websocket.yml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: shenyu-example-spring-annotation-websocket-deployment
  labels:
    app: shenyu-example-spring-annotation-websocket
    all: shenyu-example-spring-annotation-websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shenyu-example-spring-annotation-websocket
      all: shenyu-example-spring-annotation-websocket
  strategy: {}
  template:
    metadata:
      labels:
        app: shenyu-example-spring-annotation-websocket
        all: shenyu-example-spring-annotation-websocket
    spec:
      containers:
        - image: shenyu-example-spring-annotation-websocket
          name: shenyu-example-spring-annotation-websocket
          livenessProbe:
            exec:
              command:
                - wget -q -O - http://localhost:8001/actuator/health | grep UP || exit 1
            initialDelaySeconds: 10
            failureThreshold: 3
            timeoutSeconds: 2
          ports:
            - containerPort: 8001
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: shenyu-example-spring-annotation-websocket
  labels:
    app: shenyu-example-spring-annotation-websocket
    all: shenyu-example-spring-annotation-websocket
spec:
  selector:
    app: shenyu-example-spring-annotation-websocket
    all: shenyu-example-spring-annotation-websocket
  type: NodePort
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8001
      nodePort: 31190
status:
  loadBalancer: {}
