shenyu-examples/shenyu-examples-websocket/shenyu-example-spring-annotation-websocket/k8s/shenyu-zookeeper.yml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shenyu-zk
    all: shenyu-examples-spring-annotation-websocket
  name: shenyu-zk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shenyu-zk
      all: shenyu-examples-spring-annotation-websocket
  strategy: {}
  template:
    metadata:
      labels:
        app: shenyu-zk
        all: shenyu-examples-spring-annotation-websocket
    spec:
      containers:
        - image: zookeeper:3.5
          name: shenyu-zk
          resources: {}
          ports:
            - containerPort: 2181
              name: client
            - containerPort: 2888
              name: server
            - containerPort: 3888
              name: leader-election
            - containerPort: 8080
              name: website
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: shenyu-zk
  labels:
    app: shenyu-zk
    all: shenyu-examples-spring-annotation-websocket
spec:
  type: NodePort
  selector:
    app: shenyu-zk
    all: shenyu-examples-spring-annotation-websocket
  ports:
    - name: "client"
      port: 2181
      targetPort: 2181
    - name: "server"
      port: 2888
      targetPort: 2888
    - name: "election"
      port: 3888
      targetPort: 3888
    - name: "website"
      port: 8080
      targetPort: 8080
